@@ -47,7 +47,7 @@ bool ompi_mpi_paffinity_alone = false;
 bool ompi_mpi_abort_print_stack = false;
 int ompi_mpi_abort_delay = 0;
 bool ompi_mpi_keep_peer_hostnames = true;
-
+bool ompi_mpi_preconnect_all = false;
 
 int ompi_mpi_register_params(void)
 {
@@ -177,6 +177,13 @@ int ompi_mpi_register_params(void)
        hard-coded to false */
     ompi_mpi_abort_print_stack = false;
 #endif
+    
+    mca_base_param_reg_int_name("mpi", "preconnect_all",
+                                "Whether to force MPI processes to create connections / warmup with *all* peers during MPI_INIT (vs. making connections lazily -- upon the first MPI traffic between each process peer pair)",
+                                false, false, 
+                                (int) ompi_mpi_preconnect_all, &value);
+    
+    ompi_mpi_preconnect_all = (bool) value; 
 
     /* The ddt engine has a few parameters */
 
